--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ input
     padding: 2em;
     border: none;
     border-bottom: 5px solid rgb(4, 140, 4);
-    background-color: rgba(240, 248, 255, 0);
+    background-color: transparent;
     font-weight: 700;
     color:white;
     width: 700px;
@@ -60,6 +60,7 @@ input
 input:focus
 {
     outline: none;
+    font-weight: bolder;
 }
 
 input::placeholder
