--- a/style.css
+++ b/style.css
@@ -73,13 +73,15 @@ label
 {
     border-bottom: 5px solid rgb(4, 140, 4);
     position: relative;
-    top: 15px;
+    top: 16px;
+    left: 10px;
 }
 
 #button
 {
     width: 100%;
     border: 5px solid rgb(4, 140, 4);
+    border-radius: 10px;
     font-size: 0.5em;
     padding: 0.3em;
     font-weight: 700;
